[package]
name = "lock-guard"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Ask Skivdal"]
description = """
A background process for shutting down your computer while its locked then unplugged
"""
documentation = "https://docs.rs/lock-guard"
repository = "https://github.com/AskSkivdal/lock-guard"
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.32"
sysinfo = "0.39.3"
